services/microbot/microbot.service.yaml
kind: Service
apiVersion: v1
metadata:
  name: microbot 
  namespace: microbot
  labels: 
    app: microbot
spec:
  selector:
    app: microbot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
