services/microbot/microbot.ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: microbot-ingress
 namespace: microbot
spec:
 rules:
   - host: microbot
     http:
       paths:
         - path: /
           backend:
             serviceName: microbot
             servicePort: 80
