services/microbot/default-deny.np.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: default-deny
  namespace: microbot
spec:
  podSelector:
    matchLabels: {}
